# tpal

./: CMakeLists.txt  LICENSE  README.md
demo/: CMakeLists.txt  build.sh  main.c
include/: dialog.h
include/tpal/: dialog.h  init.h  user.h
include_private/: base.h  dialog_linux.h
src/: dialog_linux.c  dialog_linux_dummy.c  dialog_linux_gtk3.c  dialog_macos.c  dialog_windows.c  init.c  user_linux.c  user_macos.m  user_windows.c
